scribble-test/src/test/resources/good/efsm/grecursion/Test09.scr
//$ bin/scribblec.sh scribble-test/src/test/resources/good/efsm/grecursion/Test09.scr -project Proto1 C


module good.efsm.grecursion.Test09;


global protocol Proto1(role A, role B, role C)
{
	1() from A to B;
	2() from A to C;
	rec X
	{
		choice at A
		{
			3() from A to B;
		}
		choice at A
		{
			rec Y
			{
				choice at A
				{
					3() from A to B;
					continue X;
				}
				or
				{
					4() from A to B;
					continue Y;
				}
				or
				{
					5() from A to B;
				}
			}
		}
	}
}

