scribble-test/src/test/resources/bad/efsm/grecursion/unfair/Test01.scr
//$ bin/scribblec.sh -ip scribble-test/src/test/resources scribble-test/src/test/resources/bad/efsm/grecursion/unfair/Test01.scr

module bad.efsm.grecursion.unfair.Test01;


// OK if -fair
// Also tests GraphBuilderUtil addContinueEdge (addEdge vs. addEdgeAux) AllTest/BadTest problem
global protocol Proto1(role A, role B, role C)
{
	rec Y
	{
		choice at A
		{
			rec X
			{
				choice at A
				{
					1() from A to B;
					continue X;
				}
				or
				{
					2() from A to C;
					continue Y;
				}
				or
				{
					3() from A to B;
					3() from A to C;
				}
			}
		}
		or
		{
			4() from A to B;
			continue Y;
		}
	}
}

